add css for presentation

--- a/frontend/src/components/Score/Score.scss
+++ b/frontend/src/components/Score/Score.scss
@@ -1,6 +1,8 @@
 .scoreTitle {
+  position: absolute;
+  right: 3%;
+  bottom: 15%;
   color: #99c24d;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.6499999761581421));
   text-align: center;
   vertical-align: text-top;
   font-size: 20px;
@@ -8,7 +10,4 @@
   line-height: auto;
   border-style: hidden;
   outline: none;
-  position: absolute;
-  top: 23%;
-  right: 4%;
 }
