--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -1,7 +1,7 @@
 nav {
   display: flex;
   background-color: #494a4d;
-  width: 100%;
+  width: 93%;
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
@@ -18,6 +18,7 @@ nav {
   a {
     color: white;
     text-decoration: none;
+    font-size: 35px;
   }
 
   a:hover {
