--- a/frontend/src/pages/GamePage/GamePage.scss
+++ b/frontend/src/pages/GamePage/GamePage.scss
@@ -29,7 +29,6 @@ body {
 }
 
 .imageGrid {
-  //background-color: #e0a64e;
   position: absolute;
   left: 20%;
   top: 20%;
@@ -87,4 +86,58 @@ body {
 #princess {
   height: 50vh;
   left: 40%;
+}
+
+// COMPONENT SCORE
+
+.scoreTitle {
+  position: absolute;
+  right: 3%;
+  bottom: 60%;
+  color: #99c24d;
+  text-align: center;
+  vertical-align: text-top;
+  font-size: 20px;
+  font-family: "cherry bomb", sans-serif;
+  line-height: auto;
+  border-style: hidden;
+  outline: none;
+}
+
+// COMPONENT TIMER
+
+.clock {
+  display: flex;
+  flex-direction: column;
+  font-size: 30px;
+  color: #f19101;
+  font-family: "cherry bomb", sans-serif;
+}
+
+.myButton {
+  background: #f18f01;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 3px 4px rgba(0, 0, 0, 0.65);
+  border-radius: 5px;
+  -webkit-text-stroke: 0.5px black;
+  background-color: hsl(36, 99%, 47%);
+  border-radius: 4px;
+  width: auto;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: "cherry bomb", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 9px 18px;
+  text-decoration: none;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.65);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.6499999761581421));
+  margin-bottom: auto;
+}
+.myButton:hover {
+  background: linear-gradient(to bottom, hsl(36, 93%, 54%) 5%, #a97526 100%);
+  background-color: #ffb342;
+}
+.myButton:active {
+  position: relative;
 }
