--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -6,12 +6,14 @@ nav {
   justify-content: space-between;
   flex-direction: row;
   font-family: "cherry bomb", sans-serif;
-  font-size: xx-large;
+  //font-size: ;
+  height: auto;
 
-  ul {
+   ul {
     display: flex;
     justify-content: space-around;
-    width: 30%;
+    width: 50%;
+    font-size: x-large;
     list-style-type: none;
     padding: 5px;
   }
