--- a/frontend/src/components/StopWatch/StopWatch.scss
+++ b/frontend/src/components/StopWatch/StopWatch.scss
@@ -1,12 +1,11 @@
 .stopwatch-container {
   /* background-color: blue; */
-  width: 10%;
+  width: 15%;
+  height: 35%; 
   display: flex;
-  justify-content: space-between;
-  flex-direction: row-reverse;
   margin-top: 10px;
   align-items: flex-end;
-  position: relative;
+  position: absolute;
   z-index: 1;
 }
 
@@ -16,6 +15,7 @@
   font-weight: 500;
   color: #f19101;
   margin-top: 70px;
+  margin-left: 50px;
   font-family: "cherry bomb", sans-serif;
 }
 
@@ -37,7 +37,7 @@
   text-decoration: none;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.65);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.6499999761581421));
-  margin-left: 40px;
+ 
   margin-bottom: auto;
 }
 .myButton:hover {
