--- a/frontend/src/components/FetchButtons/FetchButtons.scss
+++ b/frontend/src/components/FetchButtons/FetchButtons.scss
@@ -5,3 +5,21 @@
   color: $white;
   @include text-shadow;
 }
+
+.waviy {
+  position: relative;
+}
+.waviy span {
+  position: relative;
+  display: inline-block;
+  font-size: 40px;
+  color: #fff;
+  text-transform: uppercase;
+  animation: flip 2s infinite;
+  animation-delay: calc(.2s * var(--i))
+}
+@keyframes flip {
+  0%,80% {
+    transform: rotateY(360deg) 
+  }
+}
