--- a/frontend/src/components/FetchButtons/FetchButtons.scss
+++ b/frontend/src/components/FetchButtons/FetchButtons.scss
@@ -6,20 +6,20 @@
   @include text-shadow;
 }
 
-.waviy {
-  position: relative;
+.loader {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid $green;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
 }
-.waviy span {
-  position: relative;
-  display: inline-block;
-  font-size: 40px;
-  color: #fff;
-  text-transform: uppercase;
-  animation: flip 2s infinite;
-  animation-delay: calc(.2s * var(--i))
-}
-@keyframes flip {
-  0%,80% {
-    transform: rotateY(360deg) 
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
