--- a/frontend/src/pages/HomePage/HomePage.scss
+++ b/frontend/src/pages/HomePage/HomePage.scss
@@ -2,11 +2,58 @@
 
 .header_text {
   @include title;
-  color: $orange;
+  color: $white;
   @include text-shadow;
   text-align: center;
   margin-bottom: 60px;
   margin-top: 60px;
+}
+
+.container {
+  // width: 100%;
+  // min-height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_text span {
+  font-size: 60px;
+  display: inline-block;
+  text-align: center;
+  width: 60px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 5;
+}
+
+.header_text span::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: $orange;
+  z-index: -1;
+  box-shadow: 0 5px 5px #111;
+}
+
+.header_text:hover span::before {
+  animation: fillBg 1s ease forwards;
+  animation-delay: calc(100ms * var(--i));
+}
+
+@keyframes fillBg {
+  0% {
+    width: 0%;
+  }
+
+  100% {
+    width: 100%;
+    transform: rotate(calc(15deg * var(--i)));
+  }
 }
 .input-username {
   display: flex;
@@ -56,3 +103,5 @@
 }
 .error {
 }
+
+
