--- a/frontend/src/components/Countdown/Countdown.scss
+++ b/frontend/src/components/Countdown/Countdown.scss
@@ -1,10 +1,10 @@
 @import "../Utils/Utils.scss";
 
-
 .timer-wrapper {
-  position: absolute;
-  right: 2%;
-  @include text-size; 
+  @include text-size;
+  position: fixed;
+  bottom: 5%;
+  left: 45%;
 }
 
 // .timer {
