--- a/frontend/src/pages/GamePage/GamePage.scss
+++ b/frontend/src/pages/GamePage/GamePage.scss
@@ -1,10 +1,20 @@
 @import "@components/Utils/Utils.scss";
 
 .restart_container {
-display: flex;
-justify-content: center;
-position: absolute;
-bottom: 5%;
-left: 46%; 
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 5%;
+  left: 46%;
 }
 
+.scoreTitle {
+  position: absolute;
+  bottom: 5%;
+  left: 5%;
+}
+.turns {
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+}
