--- a/frontend/src/components/Leaderboard/Leaderboard.scss
+++ b/frontend/src/components/Leaderboard/Leaderboard.scss
@@ -1,60 +1,54 @@
+@import "../Utils/Utils.scss";
+
 .list::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
+  -webkit-box-shadow: inset 0 0 6px $black(0, 0, 0, 0.3);
+  background-color: $white;
 }
 
 .list::-webkit-scrollbar {
   width: 6px;
-  background-color: #494a4d;
+  background-color: $black;
 }
 
 .list::-webkit-scrollbar-thumb {
-  background-color: #f18f01;
+  background-color: $orange;
 }
 
 .container {
-  text-align: center;
-  background-color: #494a4d;
-  margin: auto;
-  font-family: "Amatic SC";
-  margin: auto;
-
-  .leaderName {
-    position: absolute;
-    text-align: center;
-    color: white;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 22px;
-  }
+  margin-top: -100px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  background-color: $black;
 
   .player {
-    background-color: #494a4d;
+    margin-bottom: 30px;
+    background-color: $black;
     display: grid;
-    grid-template-columns: 0.4fr 3fr 1fr 1fr 1fr 1fr 1fr 1fr;
-
-    align-items: center;
+    gap: 200px;
+    grid-template-columns: 0.4fr 3fr 1fr;
     min-height: 42px;
     text-align: center;
-    padding-right: 0.4rem;
+    @include text-size;
+    @include text-shadow;
   }
 
   .table {
-    margin-right: 0.1rem;
+    margin-bottom: 30px;
     display: grid;
+    gap: 200px;
     font-size: 14px;
-    grid-template-columns: 0.4fr 3fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.4fr 3fr 1fr;
     text-align: center;
-    font-size: 25px;
-    color: #99c24d;
+    color: $green;
+    @include text-shadow;
+    @include text-nav;
   }
 
   .playerslist {
     margin-top: 6rem;
-    font-size: 16px;
     overflow: hidden;
-    color: #ffffff;
-    font-family: "cherry bomb", sans-serif;
+    color: $white;
 
     .player:nth-child(1) {
       background-color: #494a4d;
@@ -63,13 +57,13 @@
     }
 
     .player:nth-child(2) {
-      background-color: #494a4d;
+      background-color: $black;
       align-items: center;
       color: gray;
     }
 
     .player:nth-child(3) {
-      background-color: #494a4d;
+      background-color: $black;
       align-items: center;
       color: brown;
     }
