--- a/frontend/src/pages/HomePage/HomePage.scss
+++ b/frontend/src/pages/HomePage/HomePage.scss
@@ -6,7 +6,54 @@
   @include text-shadow;
   text-align: center;
   margin-bottom: 60px;
-  margin-top: 60px;
+
+}
+//header text animation 
+.title_container {
+  margin-top: 80px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#Mashup span {
+  font-size: 60px;
+  display: inline-block;
+  text-align: center;
+  width: 60px;
+  text-transform: uppercase;
+  position: relative;
+  color: $white;
+  z-index: 5;
+}
+
+#Mashup span::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: $orange;
+  z-index: -1;
+  box-shadow: 0 5px 5px #111;
+}
+
+#Mashup:hover span::before {
+  animation: fillBg 1s ease forwards;
+  animation-delay: calc(100ms * var(--i));
+}
+
+@keyframes fillBg {
+  0% {
+    width: 0%;
+  }
+
+  100% {
+    width: 100%;
+    transform: rotate(calc(15deg * var(--i)));
+  }
 }
 .input-username {
   display: flex;
